--- a/index.html
+++ b/index.html
@@ -77,50 +77,89 @@
     </section>
 
     <section class="section2">
-        <div class="section2-container">
-            <div class="section2-content-box">
-                <br>
-                <h1>No Hidden Fees Ever.</h1>
-                <br>
-                <div class="section2-sub-heading">
-                    <span class="section2-text">No Joining Fees.</span>
-                    <br>
-                    <span class="section2-text">No Annual Fees.</span>
-                    <br>
-                    <span class="section2-text">No Rewards Redemption Fees.</span>
-                    <br>
-                </div>
-                <br>
-                <br>
-            </div>
+      <div class="section2-container">
+        <div class="section2-content-box">
+          <br />
+          <h1>No Hidden Fees Ever.</h1>
+          <br />
+          <div class="section2-sub-heading">
+            <span class="section2-text">No Joining Fees.</span>
+            <br />
+            <span class="section2-text">No Annual Fees.</span>
+            <br />
+            <span class="section2-text">No Rewards Redemption Fees.</span>
+            <br />
+          </div>
+          <br />
+          <br />
         </div>
+      </div>
     </section>
 
     <section class="section3">
-        <div class="section3-container">
-            <div class="section3-content">
-                <div class="sectoin3-left-box">
-                    <video class="section3-left-video" width="460" height="460" autoplay="autoplay" muted="muted">
-                        <source src="./library/section3-vid.mp4">
-                    </video>
-                </div>
-                <div class="sectoin3-right-box">
-                    <div class="section3-right-content">
-                        <div class="section3-right-img">
-                            <img src="./library/section3-smallimg.svg" alt="">
-                        </div>
-                        <div class="section3-right-heading">
-                            <span>Powerful</span>
-                            
-                        <span>mobile app</span>
-                        </div>
-                        <div class="section3-right-text">
-                            Control all aspects of your One credit card from the powerful OneCard app - transaction limit, domestic/international use, online/offline use, contactless payments and much more.
-                        </div>
-                    </div>
-                </div>
+      <div class="section3-container">
+        <div class="section3-content">
+          <div class="sectoin3-left-box">
+            <video
+              class="section3-left-video"
+              width="460"
+              height="460"
+              autoplay="autoplay"
+              muted="muted"
+              loop="loop"
+            >
+              <source src="./library/section3-vid.mp4" />
+            </video>
+          </div>
+          <div class="sectoin3-right-box">
+            <div class="section3-right-content">
+              <div class="section3-right-img">
+                <img src="./library/section3-smallimg.svg" alt="" />
+              </div>
+              <div class="section3-right-heading">
+                <span>Powerful</span>
+
+                <span>mobile app</span>
+              </div>
+              <div class="section3-right-text">
+                Control all aspects of your One credit card from the powerful
+                OneCard app - transaction limit, domestic/international use,
+                online/offline use, contactless payments and much more.
+              </div>
             </div>
+          </div>
         </div>
+      </div>
+    </section>
+    <section class="section4">
+      <div class="section4-container">
+        <div class="section4-content-box">
+          <div class="section4-left-box">
+            <div class="section4-left-content">
+              <div class="section4-left-img">
+                <img src="./library/section4-smallimg.svg" alt="" />
+              </div>
+              <div class="section4-left-heading">It's metal</div>
+              <div class="section4-left-text">
+                A co-branded credit card that is exclusive, and exquisitely
+                crafted with metal, because you deserve only the best. Why
+                settle for plastic cards anymore?
+              </div>
+            </div>
+          </div>
+          <div class="section4-right-box">
+            <video
+              width="100%"
+              height="auto"
+              autoplay="autoplay"
+              loop="loop"
+              muted="muted"
+            >
+              <source src="./library/section4-vid.mp4" />
+            </video>
+          </div>
+        </div>
+      </div>
     </section>
   </body>
 </html>
