--- a/index.html
+++ b/index.html
@@ -161,5 +161,144 @@
         </div>
       </div>
     </section>
+
+    <section class="section5">
+      <div class="section5-container">
+        <div class="section5-content">
+          <div class="sectoin5-left-box">
+            <video
+              class="section5-left-video"
+              width="460"
+              height="460"
+              autoplay="autoplay"
+              muted="muted"
+              loop="loop"
+            >
+              <source src="./library/section5-vid.mp4" />
+            </video>
+          </div>
+          <div class="sectoin5-right-box">
+            <div class="section5-right-content">
+              <div class="section5-right-img">
+                <img src="./library/section5-smallimg.svg" alt="" />
+              </div>
+              <div class="section5-right-heading">
+                <span>Seamless</span>
+
+                <span>on-boarding</span>
+              </div>
+              <div class="section5-right-text">
+                Get started using a completely digital on-boarding process, and
+                activate your One Credit Card in less than 5 minutes.
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="section6">
+      <div class="section6-container">
+        <div class="section6-content-box">
+          <div class="section6-left-box">
+            <div class="section6-left-content">
+              <div class="section6-left-img">
+                <img
+                  src="./library/section6-smallimg.svg"
+                  width="66.33"
+                  height="66.33"
+                  alt=""
+                />
+              </div>
+              <div class="section6-left-heading">
+                <span>5X rewards on your top</span>
+
+                <span>spends</span>
+              </div>
+              <div class="section6-left-text">
+                5X rewards on Top 2 spend categories. Points are credited
+                instantly and never expire. Just swipe right to redeem. No more
+                rounding off, get even fractional points.
+              </div>
+            </div>
+          </div>
+          <div class="section6-right-box">
+            <video
+              width="400"
+              height="400"
+              autoplay="autoplay"
+              loop="loop"
+              muted="muted"
+            >
+              <source src="./library/section6-vid.mp4" />
+            </video>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="section7">
+      <div class="section7-container">
+        <div class="section7-content">
+          <div class="sectoin7-left-box">
+            <video
+              class="section7-left-video"
+              width="460"
+              height="460"
+              autoplay="autoplay"
+              muted="muted"
+              loop="loop"
+            >
+              <source src="./library/section7-vid.mp4" />
+            </video>
+          </div>
+          <div class="sectoin7-right-box">
+            <div class="section7-right-content">
+              <div class="section7-right-img">
+                <img src="./library/section7-smallimg.svg" alt="" />
+              </div>
+              <div class="section7-right-heading">
+                <span>One Credit Card</span>
+
+                <span>EMI</span>
+              </div>
+              <div class="section7-right-text">
+                Get started using a completely digital on-boarding process, and
+                activate your One Credit Card in less than 5 minutes.
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="section8">
+      <div class="section8-container">
+        <div class="section8-content-box">
+          <div class="section8-left-box">
+            <div class="section8-left-content">
+              <div class="section8-left-img">
+                <img
+                  src="./library/section8-smallimg.png"
+                  width="66.33"
+                  height="58.92"
+                  alt=""
+                />
+              </div>
+              <div class="section8-left-heading">MyFamily</div>
+              <div class="section8-left-text">
+                Share limit with your family. They get their own One Credit Card
+                with separate offers while you keep track and control of their
+                spending.
+              </div>
+            </div>
+            <a class="section8-learn-btn" href="#">Learn More</a>
+          </div>
+          <div class="section8-right-box">
+            <img src="./library/section8-vid.gif" width="510" height="510" />
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
