--- a/index.html
+++ b/index.html
@@ -300,5 +300,409 @@
         </div>
       </div>
     </section>
+    <section class="section9">
+      <div class="section9-container">
+        <div class="section9-heading-box">
+          <div class="section9-heading">
+            <span>From Our</span>
+            <span>&ThinSpace; Blog</span>
+          </div>
+        </div>
+
+        <div class="section9-card-container">
+          <div class="section9-card-content-box">
+            <div class="section-card-heading">
+              <h4>Explore Latest</h4>
+            </div>
+
+            <div class="section9-card-row">
+              <div class="section9-card-row-content">
+                <div class="section9-card1">
+                  <a href="#">
+                    <img src="./library/section9-img1.png" alt="" />
+                  </a>
+                  <div class="section9-card1-content">
+                    <div class="section9-card1-date">
+                      <span>May 17, 2024</span>
+                    </div>
+                    <div class="section9-card1-text">
+                      <p>
+                        <a class="link-text" href="#"
+                          >Win An All-Expense-Paid Trip to Olympic Games Paris
+                          2024</a
+                        >
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <div class="section9-card2">
+                  <a href="#">
+                    <img src="./library/section9-img2.png" alt="" />
+                  </a>
+
+                  <div class="section9-card2-content">
+                    <div class="section9-card2-date">
+                      <span>May 09, 2024</span>
+                    </div>
+                    <div class="section9-card2-text">
+                      <p>
+                        <a class="link-text" href="#"
+                          >Future of Credit Cards - Are Virtual Cards the
+                          Future?</a
+                        >
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <div class="section9-card3">
+                  <a href="#">
+                    <img src="./library/section9-img3.png" alt="" />
+                  </a>
+
+                  <div class="section9-card3-content">
+                    <div class="section9-card3-date">
+                      <span>May 08, 2024</span>
+                    </div>
+                    <div class="section9-card3-text">
+                      <p>
+                        <a class="link-text" href="#"
+                          >How Credit Cards with No Hidden Fees are Changing the
+                          Game</a
+                        >
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="section9-button">
+                <a href="#">View All</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="section10">
+      <div class="section10-container">
+        <div class="section10-row">
+          <div class="section10-column1">
+            <div class="section10-title-box">
+              <div class="section10-title">Banking Partners</div>
+              <div class="section10-text">
+                One Credit Card is a co-branded credit card issued by Scheduled
+                commercial Banks and Financial Institutions in partnership with
+                M/s One Consumer Services Private Limited. The issuing
+                Banks/Financial Institutions are :
+              </div>
+            </div>
+          </div>
+          <div class="section10-column2">
+            <div class="section10-img">
+              <img
+                src="./library/section10-img.png"
+                height="auto"
+                width="330px"
+                alt=""
+              />
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="section11">
+      <div class="section11-container">
+        <div class="section11-row">
+          <div class="section11-column1">
+            <div class="section11-title-box">
+              <div class="section11-title">Investors</div>
+              <div class="section11-text">
+                We are backed by marquee investors who share our vision,
+                passion, and commitment to first principles.
+              </div>
+            </div>
+          </div>
+          <div class="section11-column">
+            <div class="section11-img">
+              <img
+                class="hover-zoom"
+                src="./library/section11-img1.svg"
+                alt=""
+              />
+            </div>
+          </div>
+          <div class="section11-column">
+            <div class="section11-img">
+              <img
+                class="hover-zoom"
+                src="./library/section11-img2.svg"
+                alt=""
+              />
+            </div>
+          </div>
+          <div class="section11-column">
+            <div class="section11-img">
+              <img
+                class="hover-zoom"
+                src="./library/section11-img3.svg"
+                alt=""
+              />
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <footer class="main-footer">
+      <div class="footer-container">
+        <div class="main-footer-row">
+          <div class="main-footer-column">
+            <div class="main-footer-content-box">
+              <a href="#" class="footer-logo">
+                <img
+                  class="footer-logo-img"
+                  width="69px"
+                  height="40px"
+                  src="./library/footer-logo.svg"
+                  alt=""
+                />
+              </a>
+              <br />
+              <div class="footer-image">
+                <img class="footer-img" src="./library/footer-img.svg" alt="" />
+              </div>
+              <br />
+              <div class="footer-heading">
+                We are all ears!
+                <br />
+                <br />
+              </div>
+              <div class="footer-text">
+                We are a new kid on the block, eager to learn.
+                <br />
+                All ideas and suggestions are welcome.
+              </div>
+              <br />
+              <br />
+              <br />
+              <br />
+              <div class="footer-follow-us">Follow Us On</div>
+              <br />
+              <br />
+              <div class="social-icon-box">
+                <a href="#">
+                  <img
+                    class="social-icon"
+                    src="./library/footer-social-facebook.svg"
+                    alt=""
+                  />
+                </a>
+                &nbsp; &nbsp;
+                <a href="#">
+                  <img src="./library/footer-social-twitter.svg" alt="" />
+                </a>
+                &nbsp; &nbsp;
+                <a href="#">
+                  <img src="./library/footer-social-instagram.svg" alt="" />
+                </a>
+                &nbsp; &nbsp;
+                <a href="#">
+                  <img src="./library/footer-social-linkedin.svg" alt="" />
+                </a>
+                &nbsp; &nbsp;
+                <a href="#">
+                  <img src="./library/footer-social-youtube.svg" alt="" />
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <footer class="bottom-footer">
+        <div class="bottom-footer-container">
+          <div class="bottom-footer-row">
+            <div class="bottom-footer-col1">
+              <h5>One Credit Card</h5>
+              <p class="bottom-link-text">
+                BOBCARD: <a class="bottom-link-text" href="#">MITC</a>,
+                <a class="bottom-link-text" href="#">T&C</a> ,
+                <a class="bottom-link-text" href="#">BT</a> ,
+                <a class="bottom-link-text" href="#">KFS</a> ,
+                <a class="bottom-link-text" href="#">OneCash</a> ,
+                <a class="bottom-link-text" href="#">EMI</a>
+              </p>
+
+              <p class="bottom-link-text">
+                CSB Bank: <a class="bottom-link-text" href="#">MITC</a>,
+                <a class="bottom-link-text" href="#">T&C</a> ,
+                <a class="bottom-link-text" href="#">KFS</a> ,
+                <a class="bottom-link-text" href="#">EMI</a>
+              </p>
+
+              <p class="bottom-link-text">
+                Federal Bank: <a class="bottom-link-text" href="#">MITC</a>,
+                <a class="bottom-link-text" href="#">T&C</a> ,
+                <a class="bottom-link-text" href="#">BT</a> ,
+                <a class="bottom-link-text" href="#">KFS</a> ,
+                <a class="bottom-link-text" href="#">F.D</a> ,
+                <a class="bottom-link-text" href="#">EMI</a>
+              </p>
+
+              <p class="bottom-link-text">
+                IDFC FIRST Bank: <a class="bottom-link-text" href="#">MITC</a>,
+                <a class="bottom-link-text" href="#">T&C</a>
+              </p>
+
+              <p class="bottom-link-text">
+                SBM Bank: <a class="bottom-link-text" href="#">F.D</a>,
+                <a class="bottom-link-text" href="#">MITC</a>,
+                <a class="bottom-link-text" href="#">KYC</a>,
+                <a class="bottom-link-text" href="#">T&C</a> ,
+                <a class="bottom-link-text" href="#">KFS</a>
+              </p>
+
+              <p class="bottom-link-text">
+                <a class="bottom-link-text" href="#"
+                  >SBM Customer Care Details</a
+                >
+              </p>
+
+              <p class="bottom-link-text">
+                <a class="bottom-link-text" href="#">SBM Grievance Details</a>
+              </p>
+
+              <p class="bottom-link-text">
+                South Indian Bank:
+                <a class="bottom-link-text" href="#">MITC</a>,
+                <a class="bottom-link-text" href="#">T&C</a> ,
+                <a class="bottom-link-text" href="#">BT</a> ,
+                <a class="bottom-link-text" href="#">KFS</a> ,
+                <a class="bottom-link-text" href="#">EMI</a>
+              </p>
+
+              <p class="bottom-link-text">
+                Indian Bank: <a class="bottom-link-text" href="#">MITC</a>,
+                <a class="bottom-link-text" href="#">T&C</a> ,
+                <a class="bottom-link-text" href="#">KFS</a>
+              </p>
+
+              <p class="bottom-link-text">
+                EMI:
+                <a class="bottom-link-text" href="#">T&C</a>
+              </p>
+
+              <p class="bottom-link-text">
+                OneCash:
+                <a class="bottom-link-text" href="#">T&C</a>
+              </p>
+            </div>
+            <div class="bottom-footer-col2">
+              <h5>Important Links</h5>
+              <p class="bottom-link-text">
+                <a class="bottom-link-text" href="#">Cookei Policy</a>
+              </p>
+              <p class="bottom-link-text">
+                <a class="bottom-link-text" href="#">Do Not Disturb</a>
+              </p>
+              <p class="bottom-link-text">
+                <a class="bottom-link-text" href="#">Privacy Policy</a>
+              </p>
+              <p class="bottom-link-text">
+                <a class="bottom-link-text" href="#">Terms Of Use</a>
+              </p>
+              <p class="bottom-link-text">
+                <a class="bottom-link-text" href="#">Terms Of Use</a>
+              </p>
+              <p class="bottom-link-text">
+                <a class="bottom-link-text" href="#"
+                  >Unparliamentary language</a
+                >
+              </p>
+              <p class="bottom-link-text">
+                <a class="bottom-link-text" href="#">Secure Usage Tips</a>
+              </p>
+              <p class="bottom-link-text">
+                <a class="bottom-link-text" href="#"
+                  >Authorized Collection Agencies</a
+                >
+              </p>
+              <p class="bottom-link-text">
+                <a class="bottom-link-text" href="#">Disclaimers</a>
+              </p>
+            </div>
+            <div class="bottom-footer-col3">
+              <h5>Company</h5>
+              <p class="bottom-link-text">
+                <a class="bottom-link-text" href="#"> About Us </a>
+              </p>
+              <p class="bottom-link-text">
+                <a class="bottom-link-text" href="#"> Join Us </a>
+              </p>
+              <p class="bottom-link-text">
+                <a class="bottom-link-text" href="#">
+                  One Credit Card Offers
+                </a>
+              </p>
+              <p class="bottom-link-text">
+                <a class="bottom-link-text" href="#"> Our Blog </a>
+              </p>
+              <p class="bottom-link-text">
+                <a class="bottom-link-text" href="#"> POSH @ Work </a>
+              </p>
+              <p class="bottom-link-text">
+                <a class="bottom-link-text" href="#"> OneScore </a>
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="end-box">
+          <hr />
+          <div class="end-img">
+            <img
+              src="./library/section1-img.png"
+              width="350px"
+              height="auto"
+              alt=""
+            />
+          </div>
+          <br />
+          <div class="end-box2">
+            <a href="#"
+              ><img
+                width="50px"
+                height="40px"
+                src="./library/end-footer-img1.png"
+                alt=""
+            /></a>
+            &nbsp;
+            <a href="#"
+              ><img
+                width="50px"
+                height="50px"
+                src="./library/end-footer-img2.png"
+                alt=""
+            /></a>
+            &nbsp;
+            <a href="#"
+              ><img
+                width="50px"
+                height="23px"
+                src="./library/end-footer-img3.png"
+                alt=""
+            /></a>
+          </div>
+          <div class="copy-row">
+            <p class="copy-right">
+              Copyright &copy; 2024 FPL Technologies Pvt. Ltd. All Rights
+              Reserved.
+            </p>
+          </div>
+        </div>
+      </footer>
+    </footer>
   </body>
 </html>
